--- a/about.html
+++ b/about.html
@@ -2,64 +2,89 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>About - Pupils' Perspective</title>
   <style>
+    * {
+      box-sizing: border-box;
+    }
     body {
       margin: 0;
-      font-family:"Times New Roman", Times, serif;
-      background-color: #CBC3E3;
+      font-family: "Times New Roman", Times, serif;
+      background-color: #cbc3e3;
+      color: #000;
     }
     header {
       background-color: #a87ad6;
       color: white;
-      padding: 1rem 0;
+      padding: 1rem 0.5rem;
       text-align: center;
-      line-height: 45%;
+    }
+    header img {
+      height: 100px;
+      width: 100px;
+      border-radius: 8px;
+    }
+
+    header h1 {
+      margin: 0.5rem 0 0;
+      font-size: 1.5rem;
+    }
+
+    header h4 {
+      margin: 0.25rem 0 1rem;
+      font-size: 1rem;
     }
     nav {
       display: flex;
+      flex-wrap: wrap;
       justify-content: center;
-      gap: 2rem;
-      padding: 1rem;
       background-color: #330066;
-      font-size: 125%;
+      padding: 0.5rem;
+      gap: 0.75rem;
     }
     nav a {
       color: white;
       text-decoration: none;
-      margin: 0 1rem;
+      font-size: 1rem;
+      padding: 0.5rem;
+    }
+    nav a:hover {
+      text-decoration: underline;
     }
     main {
-      padding: 2rem;
-      text-align: justify;
+      padding: 1rem;
+    }
+    main h2 {
+      text-align: center;
+      font-size: 1.5rem;
     }
     main p {
-        font-size: 125%
+      font-size: 1rem;
+      line-height: 1.6;
+      margin-bottom: 1rem;
+      text-align: justify;
     }
     footer {
       background-color: #000435;
       color: white;
-      text-align: left;
       padding: 1rem;
     }
-    footer p {
-      margin: 0.5rem 0;
-      display: flex;
-      align-items: center;
-      gap: 0.5rem;
-      font-size: 1.2rem;
-    }
     footer strong {
-      margin: 0.5rem 0;
+      font-size: 1.3rem;
+      display: block;
+      margin-bottom: 0.75rem;
+    }
+    footer p {
       display: flex;
       align-items: center;
       gap: 0.5rem;
-      font-size: 1.7rem;
+      margin: 0.5rem 0;
+      font-size: 1rem;
+      flex-wrap: wrap;
     }
     footer img {
-      display: inline-block;
       width: 20px;
       height: 20px;
     }
@@ -69,6 +94,35 @@
     }
     footer a:hover {
       text-decoration: underline;
+    }
+
+    /* Responsive Design */
+    @media (max-width: 600px) {
+      nav {
+        flex-direction: column;
+        align-items: center;
+      }
+      header img {
+        width: 80px;
+        height: 80px;
+      }
+      h1 {
+        font-size: 1.3rem;
+      }
+      h4 {
+        font-size: 0.9rem;
+      }
+      main {
+        padding: 1rem 0.75rem;
+      }
+      main h2 {
+        font-size: 1.3rem;
+      }
+      footer p {
+        font-size: 0.95rem;
+        flex-direction: column;
+        align-items: flex-start;
+      }
     }
   </style>
 </head>
@@ -84,22 +138,18 @@
       <a href="join.html">Join Us</a>
     </nav>
   </header>
+  
   <main>
     <h2>Welcome to Pupils' Perspective</h2>
-   <p>We work together on various social issues to make a positive impact in our community.We are a youth organization committed to social change and community development. Our mission is to empower young people to take initiative in solving social issues. <b>Justice</b> is our first priority in any social issues. </p>
-   <p><b>Pupils' Perspective</b> was situated on March, 2025. Our first project was <b>DU 2nd Time Re-open Movement.</b> We're still working on this issue and we hope that we'll be succeeded very soon, <b>In Sha Allah</b>!</p>
+    <p>We work together on various social issues to make a positive impact in our community. We are a youth organization committed to social change and community development. Our mission is to empower young people to take initiative in solving social issues. <b>Justice</b> is our first priority.</p>
+    <p><b>Pupils' Perspective</b> was established in March 2025. Our first project was the <b>DU 2nd Time Re-open Movement</b>. We're still working on this issue and hope to succeed very soon, <b>In Sha Allah</b>!</p>
   </main>
   <footer>
-    <p><strong>Reach us</strong></p><br>
-    <p><a href="https://www.facebook.com/PupilsPerspective"><img src="https://upload.wikimedia.org/wikipedia/commons/6/6c/Facebook_Logo_2023.png" alt="Facebook"></a>
-       <a href="https://www.facebook.com/PupilsPerspective"> Facebook</a></p>
-    <p><a href="https://maps.app.goo.gl/PPo1x6TJf3cnmT249"><img src="https://png.pngtree.com/png-vector/20230106/ourmid/pngtree-flat-red-location-sign-png-image_6553065.png" alt="Location"></a> 
-       <a href="https://maps.app.goo.gl/PPo1x6TJf3cnmT249">Visit our office</a></p>
-    <p><a href="mailto:pupilsperspective.org@gmail.com"><img src="https://cdn4.iconfinder.com/data/icons/social-media-logos-6/512/112-gmail_email_mail-512.png" alt="Email"></a>
-        Mail for necessary information: <a href="mailto:pupilsperspective.org@gmail.com">pupilsperspective.org@gmail.com</a></p>
-    <p><a href="tel:+8801306264601"><img src="https://www.citypng.com/public/uploads/preview/hd-green-square-phone-icon-png-7017516950597582y4ltbrryl.png" alt="Phone"></a>
-        Call now: <a href="tel:+8801306264601">+8801884541714</a></p>
+    <p><strong>Reach us</strong></p>
+    <p><a href="https://www.facebook.com/PupilsPerspective"><img src="https://upload.wikimedia.org/wikipedia/commons/6/6c/Facebook_Logo_2023.png" alt="Facebook"></a> <a href="https://www.facebook.com/PupilsPerspective">Facebook</a></p>
+    <p><a href="https://maps.app.goo.gl/PPo1x6TJf3cnmT249"><img src="https://png.pngtree.com/png-vector/20230106/ourmid/pngtree-flat-red-location-sign-png-image_6553065.png" alt="Location"></a> <a href="https://maps.app.goo.gl/PPo1x6TJf3cnmT249">Visit our office</a></p>
+    <p><a href="mailto:pupilsperspective.org@gmail.com"><img src="https://cdn4.iconfinder.com/data/icons/social-media-logos-6/512/112-gmail_email_mail-512.png" alt="Email"></a> Mail us: <a href="mailto:pupilsperspective.org@gmail.com">pupilsperspective.org@gmail.com</a></p>
+    <p><a href="tel:+8801306264601"><img src="https://www.citypng.com/public/uploads/preview/hd-green-square-phone-icon-png-7017516950597582y4ltbrryl.png" alt="Phone"></a> Call: <a href="tel:+8801884541714">+8801884541714</a></p>
   </footer>
 </body>
 </html>
-
