--- a/home.html
+++ b/home.html
@@ -3,7 +3,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8"/>
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Pupils' Perspective</title>
   <style>
     body {
@@ -14,140 +14,161 @@
     header {
       background-color: #a87ad6;
       color: white;
-      padding: 1rem 0;
+      padding: 1rem 0.5rem;
       text-align: center;
     }
-    header h1, header h4 {
-      margin: 0.25rem 0;
+    header img {
+      height: 100px;
+      width: 100px;
+      border-radius: 8px;
+    }
+
+    header h1 {
+      margin: 0.5rem 0 0;
+      font-size: 1.5rem;
+    }
+
+    header h4 {
+      margin: 0.25rem 0 1rem;
+      font-size: 1rem;
     }
     nav {
       display: flex;
+      flex-wrap: wrap;
       justify-content: center;
-      gap: 2rem;
+      gap: 1rem;
       padding: 1rem;
       background-color: #330066;
-      font-size: 1.25rem;
+      font-size: 1rem;
     }
+
     nav a {
       color: white;
       text-decoration: none;
       font-weight: bold;
     }
+
     nav a:hover {
       text-decoration: underline;
     }
+
     main {
-      padding: 2rem;
-      max-width: 1000px;
+      padding: 1rem;
+      max-width: 900px;
       margin: 0 auto;
     }
-    main a {
-      color: black;
-      text-decoration: none;
+
+    main h2 {
+      font-size: 1.5rem;
+      text-align: center;
+      margin-bottom: 1rem;
     }
-.table-container {
-  overflow-x: auto;
-  -webkit-overflow-scrolling: touch;
+
+    .projects-wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
   margin-bottom: 2rem;
 }
 
-.project-table {
-  width: 100%;
-  border-collapse: separate;
-  border-spacing: 1rem;
-  margin-bottom: 0rem;
+.project-card {
+  display: flex;
+  flex-direction: row;
   background: white;
-  border-radius: 4px;
+  border-radius: 8px;
+  overflow: hidden;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+  text-decoration: none;
+  color: inherit;
+  transition: transform 0.3s ease;
 }
-.project-table th,
-.project-table td {
+
+.project-card:hover {
+  transform: scale(1.02);
+}
+
+.project-card img {
+  width: 40%;
+  object-fit: cover;
+}
+
+.project-info {
   padding: 1rem;
-  vertical-align: middle; 
+  width: 60%;
+}
+
+.project-info h3 {
+  color: #7F00FF;
+  margin-top: 0;
+}
+
+.project-info p {
+  margin: 0.5rem 0 1rem;
   text-align: justify;
-  font-size: 111%;
 }
 
-.project-table thead th {
-  background-color: #7F00FF;
-  color: white;
+.status-tag {
   font-weight: bold;
-  border-radius: 4px;
+  color: #333;
 }
 
-.project-table td:nth-child(3) {
-  vertical-align: middle; 
-  text-align: justify;    
+@media (max-width: 768px) {
+  .project-card {
+    flex-direction: column;
+  }
+
+  .project-card img,
+  .project-info {
+    width: 110%;
+  }
+
+  .project-info {
+    padding: 1rem 1rem 1.5rem;
+  }
+
+  .project-info p {
+    font-size: 1.2rem;
+  }
 }
 
-@media (max-width: 600px) {
-  .project-table,
-  .project-table thead,
-  .project-table tbody,
-  .project-table tr,
-  .project-table th,
-  .project-table td {
-    display: block;
-    width: 100%;
-  }
-  .project-table thead {
-    display: none;
-  }
-  .project-table tr {
-    margin-bottom: .5rem;
-  }
-  .project-table td {
-    position: relative;
-    padding-left: 50%;
-  }
-  .project-table td::before {
-    content: attr(data-label);
-    position: absolute;
-    left: 1rem;
-    top: 1rem;
-    font-weight: bold;
-  }
-  .project-table td:nth-child(3) {
-    text-align: justify;
-    padding-left: 1rem;
-  }
-    }
+
     footer {
       background-color: #000435;
       color: white;
-      text-align: left;
       padding: 1rem;
     }
-    footer p {
-      margin: 0.5rem 0;
-      display: flex;
-      align-items: center;
-      gap: 0.5rem;
-      font-size: 1.1rem;
-    }
+
     footer strong {
       margin: 0.5rem 0;
       display: flex;
       align-items: center;
       gap: 0.5rem;
+      flex-wrap: wrap;
       font-size: 1.7rem;
     }
+    footer p{
+      font-size: 1.2em;
+    }
+
     footer img {
-      display: inline-block;
       width: 20px;
       height: 20px;
     }
+
     footer a {
       color: white;
       text-decoration: none;
     }
+
     footer a:hover {
       text-decoration: underline;
     }
   </style>
 </head>
 <body>
+
   <header>
-    <img src="https://scontent.fzyl2-2.fna.fbcdn.net/v/t39.30808-6/499949593_122158318880569708_8847989788250019410_n.jpg?stp=dst-jpg_p526x296_tt6&_nc_cat=102&ccb=1-7&_nc_sid=833d8c&_nc_eui2=AeHEQ5K0ln53APmx6m5n77crs4N8gHmERUezg3yAeYRFR7e-6Fffm-6emxfg05eKMFYekreDtgXRCupEBA6w2LsF&_nc_ohc=X6SckJP_y-gQ7kNvwHb-vVS&_nc_oc=AdkT-KtfYQWCEcj4bPeA89b-o4sC4UUSzgNB_vH_uJk5BNLDn8cfNExm88GevNrVxCk&_nc_zt=23&_nc_ht=scontent.fzyl2-2.fna&_nc_gid=D_Wv8LKfZpO1mT1lqSu2uA&oh=00_AfK1Ru1MLBjf9tiPmNGtHihp5c7-rtoASFh6lCCDHByeIg&oe=6836C585"; height="130px"; width="130px"><br>
+    <img src="https://scontent.fzyl2-2.fna.fbcdn.net/v/t39.30808-6/499949593_122158318880569708_8847989788250019410_n.jpg?stp=dst-jpg_p526x296_tt6&_nc_cat=102&ccb=1-7&_nc_sid=833d8c&_nc_eui2=AeHEQ5K0ln53APmx6m5n77crs4N8gHmERUezg3yAeYRFR7e-6Fffm-6emxfg05eKMFYekreDtgXRCupEBA6w2LsF&_nc_ohc=X6SckJP_y-gQ7kNvwHb-vVS&_nc_oc=AdkT-KtfYQWCEcj4bPeA89b-o4sC4UUSzgNB_vH_uJk5BNLDn8cfNExm88GevNrVxCk&_nc_zt=23&_nc_ht=scontent.fzyl2-2.fna&_nc_gid=VDvRXciI4Wj1Vz8dt8B52g&oh=00_AfJCnkxcQSMlygYT51hjoj68RHUiZlkhRRidi2T-fjdg2A&oe=68373605" alt="Logo">
     <h1>PUPILS' PERSPECTIVE</h1>
     <h4>SERVICE WITH JUSTICE</h4>
     <nav>
@@ -161,48 +182,37 @@
   <main>
     <h2>Our Projects</h2>
 
-    <!-- Duplicate this block for each project -->
-    <a href="du2ndtimeprotest.html">
-    <div class="table-container">
-      <table class="project-table">
-        <thead>
-          <tr>
-            <th colspan="2">DU 2nd Time Admission Re-open</th>
-            <th>Status</th>
-          </tr>
-        </thead>
-        <tbody>
-          <tr>
-            <td data-label="Cover Photo">
-              <img src="https://scontent.fzyl2-2.fna.fbcdn.net/v/t39.30808-6/499784969_122120421086821289_7263840862193975299_n.jpg?_nc_cat=100&ccb=1-7&_nc_sid=cc71e4&_nc_eui2=AeEc0r0STgRFz7I8gB5Fyxy0ixuUiOCYWjOLG5SI4JhaM0rDD0JM1Q9yVqE7cld6y0AnYNBkDORumIVpZ1WTTbkH&_nc_ohc=B8waEZootLQQ7kNvwExyWbF&_nc_oc=AdmO5w5rB9VTZYa4VGAbpDem7ddRO9QPzmH2CnwDOaxKSLKkiWqyYLjhEuRIX6uCYYo&_nc_zt=23&_nc_ht=scontent.fzyl2-2.fna&_nc_gid=bstqxzPx8HeNE2qtLxO65A&oh=00_AfJwJaTVSlaIWYUx3EQv_kVEtqA2IbnVpCT-98rN1U9Rxg&oe=6835FA99" alt="Project Cover"; height="190px"; width="320"/>
-            </td>
-            <td data-label="Project Details">
-              <p>This project is to solve the 'DU 2nd Time Admission System Re-open' issue. As it is a legal claim of a certain group of students', so we decided work on this issue to re-open the 2nd time admission exam system in DU, closed by the authority of the University of Dhaka in October, 2014. Tap here to see details.</p>
-            </td>
-            <td>
-                <i>Progressing</i>
-            </td>
-          </tr>
-        </tbody>
-      </table>
+    <!-- Project block -->
+    <a href="du2ndtimeprotest.html" style="text-decoration: none;">
+      <div class="projects-wrapper">
+  <a href="du2ndtimeprotest.html" class="project-card">
+    <img src="https://scontent.fzyl2-2.fna.fbcdn.net/v/t39.30808-6/499784969_122120421086821289_7263840862193975299_n.jpg?_nc_cat=100&ccb=1-7&_nc_sid=cc71e4&_nc_eui2=AeEc0r0STgRFz7I8gB5Fyxy0ixuUiOCYWjOLG5SI4JhaM0rDD0JM1Q9yVqE7cld6y0AnYNBkDORumIVpZ1WTTbkH&_nc_ohc=B8waEZootLQQ7kNvwExyWbF&_nc_oc=AdmO5w5rB9VTZYa4VGAbpDem7ddRO9QPzmH2CnwDOaxKSLKkiWqyYLjhEuRIX6uCYYo&_nc_zt=23&_nc_ht=scontent.fzyl2-2.fna&_nc_gid=9ntA_KDq5ujrXJPSyTuXlQ&oh=00_AfI9-84AxYLWcTQHa3fTWO3q-wLsKa0ZVDBf7NvjNhMYZQ&oe=6836A359" alt="Project Cover">
+    <div class="project-info">
+      <h3>DU 2nd Time Admission Re-open</h3>
+      <p>2nd time admission system is an internationally recognized system. If Harvard University has 3rd time chance, then what's the problem with DU?</p>
+      <div class="status-tag">
+        Project starded on:  27th March, 2025<br>
+        Project ended on: (Not ended yet!)<br>
+        Status: <i>Progressing</i>
+      </div>
     </div>
+  </a>
+</div>
     </a>
-
-    <!-- Add more project tables here -->
 
   </main>
 
   <footer>
-    <p><strong>Reach us</strong></p><br>
+    <p><strong>Reach us</strong></p>
     <p><a href="https://www.facebook.com/PupilsPerspective"><img src="https://upload.wikimedia.org/wikipedia/commons/6/6c/Facebook_Logo_2023.png" alt="Facebook"></a>
-       <a href="https://www.facebook.com/PupilsPerspective"> Facebook</a></p>
-    <p><a href="https://maps.app.goo.gl/PPo1x6TJf3cnmT249"><img src="https://png.pngtree.com/png-vector/20230106/ourmid/pngtree-flat-red-location-sign-png-image_6553065.png" alt="Location"></a> 
+       <a href="https://www.facebook.com/PupilsPerspective">Facebook</a></p>
+    <p><a href="https://maps.app.goo.gl/PPo1x6TJf3cnmT249"><img src="https://png.pngtree.com/png-vector/20230106/ourmid/pngtree-flat-red-location-sign-png-image_6553065.png" alt="Location"></a>
        <a href="https://maps.app.goo.gl/PPo1x6TJf3cnmT249">Visit our office</a></p>
     <p><a href="mailto:pupilsperspective.org@gmail.com"><img src="https://cdn4.iconfinder.com/data/icons/social-media-logos-6/512/112-gmail_email_mail-512.png" alt="Email"></a>
-        Mail for necessary information: <a href="mailto:pupilsperspective.org@gmail.com">pupilsperspective.org@gmail.com</a></p>
+        Mail us: <a href="mailto:pupilsperspective.org@gmail.com">pupilsperspective.org@gmail.com</a></p>
     <p><a href="tel:+8801306264601"><img src="https://www.citypng.com/public/uploads/preview/hd-green-square-phone-icon-png-7017516950597582y4ltbrryl.png" alt="Phone"></a>
-        Call now: <a href="tel:+8801306264601">+8801884541714</a></p>
+        Call now: <a href="tel:+8801884541714">+8801884541714</a></p>
   </footer>
+
 </body>
 </html>
-
