--- a/board.html
+++ b/board.html
@@ -35,16 +35,20 @@
     }
     nav {
       display: flex;
+      flex-wrap: wrap;
       justify-content: center;
-      gap: 2rem;
+      gap: 1rem;
       padding: 1rem;
       background-color: #330066;
-      font-size: 1.25rem;
+      font-size: 1rem;
     }
+
     nav a {
       color: white;
       text-decoration: none;
+      font-weight: bold;
     }
+
     nav a:hover {
       text-decoration: underline;
     }
@@ -150,23 +154,23 @@
   <div class="board-cards">
     <div class="card">
       <img src="https://scontent.fzyl2-2.fna.fbcdn.net/v/t39.30808-1/488084743_1417941512703890_2390954522007204251_n.jpg?stp=dst-jpg_s200x200_tt6&_nc_cat=103&ccb=1-7&_nc_sid=1d2534&_nc_eui2=AeGQgioWe61aH3RgYtkmB_sYXkZXULsNw7FeRldQuw3DsTFT_OlE9TrAasqSklLnvykSKSKMEpbID09BaykY7h3s&_nc_ohc=O8B8-2CskdUQ7kNvwGror7j&_nc_oc=AdlxVYewK2ZREyIO97P5AAuNOpvLgr7G2VhEmlmHb9T27BcW3HZ-cHBujWfMPctikXA&_nc_zt=24&_nc_ht=scontent.fzyl2-2.fna&_nc_gid=2ZqO29vhhmMQTWbh3ZvdfA&oh=00_AfKsvHq_S3qQvlEZPqwJ3gavRkaFqUM6YQFgkzRuasu0OQ&oe=6837206B" alt="Maisha Maha Sneha" />
-      <h3>President</h3>
       <p>Maisha Maha Sneha</p>
+      <h3>President</h3>
     </div>
     <div class="card">
       <img src="https://scontent.fzyl2-2.fna.fbcdn.net/v/t39.30808-6/489536718_1049875433695620_4064389144201403854_n.jpg?_nc_cat=106&ccb=1-7&_nc_sid=6ee11a&_nc_eui2=AeHwtAQZJHeU851I6tv0YjnkcOWiclM58_tw5aJyUznz-3WVuV3y06RWiaSh2BSaRjbz9-VcMngcabIaLYnod2VE&_nc_ohc=Iwj2liVQD8UQ7kNvwFVtm-R&_nc_oc=AdmLLWvaknSRodYK45mUq0_y8XYcwPf10zNf2T1wN57DC4c6w94pK_lxiGV87KAd4Lg&_nc_zt=23&_nc_ht=scontent.fzyl2-2.fna&_nc_gid=7azWQTuvmPSJc5SK8HUx2Q&oh=00_AfIMVGOmDWNyPsIFyeZy7Wk1KLAGuPCXSH3QfW_BDmOkFg&oe=6837480D" alt="Gazi Sadiya Islam Munia" />
-      <h3>Vice President</h3>
       <p>Gazi Sadiya Islam Munia</p>
+      <h3>Vice President</h3>
     </div>
     <div class="card">
       <img src="https://scontent.fzyl2-2.fna.fbcdn.net/v/t39.30808-6/483878818_2057565518043857_3035604708767277915_n.jpg?_nc_cat=102&ccb=1-7&_nc_sid=6ee11a&_nc_eui2=AeEmSFw_CC6_XhqtVnhlurhZ6zSS5oHJ3IHrNJLmgcncgc7YULG18eahWRhuYOAVS6he2GAqSe3OdgBYCNF6hap2&_nc_ohc=DZV21O2-qlAQ7kNvwFTABr5&_nc_oc=Adnls00xlXw6Lsjr4X49wo8-jyhk-GT2uwqoeQMBq5E8jmFVVe2aocGzz1wCZRrfdlI&_nc_zt=23&_nc_ht=scontent.fzyl2-2.fna&_nc_gid=AIZdjUF7V70IehErSMr4yA&oh=00_AfIXfyGCi83pCT7ZYPIfn-5QgJqMmI35n0VC3DOcxCe5xw&oe=68372ACA" alt="Fozle Rabbi" />
-      <h3>HRO & IT Manager</h3>
       <p>Fozle Rabbi</p>
+      <h3>HRO & IT Manager</h3>
     </div>
     <div class="card">
       <img src="https://scontent.fzyl2-2.fna.fbcdn.net/v/t39.30808-6/499205612_122132035010707841_3846346001235206791_n.jpg?_nc_cat=100&ccb=1-7&_nc_sid=a5f93a&_nc_eui2=AeH9Ow7uyTtxozUuKVZ774iduX1ZxrUDLb-5fVnGtQMtv7G9Mks85w5F-tbvo_TZV4zQn2QRrPI24WkROeDAPPay&_nc_ohc=sXEZsyoKHeIQ7kNvwE_D0Sr&_nc_oc=AdnwOnIrarYuPG3Gac5RlKInOkdBGoHEU5VxGd_F_6EEFZ08isLFUa3ranxvrpCDqyw&_nc_zt=23&_nc_ht=scontent.fzyl2-2.fna&_nc_gid=mP5LCB4b617jFPM32cMMQA&oh=00_AfKX_Au3HJSZIwL7Fi86sGNYPL0vz8ddTiE30d0dMlTMWw&oe=68374727" alt="Kiram Ahmed Khan" />
-      <h3>Editor & IT Manager</h3>
       <p>Kiram Ahmed Khan</p>
+      <h3>Editor & IT Manager</h3>
     </div>
   </div>
 </main>
