--- a/du2ndtimeprotest.html
+++ b/du2ndtimeprotest.html
@@ -23,15 +23,22 @@
   
     nav {
       display: flex;
+      flex-wrap: wrap;
       justify-content: center;
-      gap: 2rem;
+      gap: 1rem;
       padding: 1rem;
       background-color: #330066;
-      font-size: 125%;
+      font-size: 1rem;
     }
+
     nav a {
       color: white;
       text-decoration: none;
+      font-weight: bold;
+    }
+
+    nav a:hover {
+      text-decoration: underline;
     }
     .alert-marquee {
       border: 4px solid red;
@@ -144,8 +151,8 @@
       <a href="join.html">Join Us</a>
     </nav>
     <br>
-    <h1>Dhaka University 2nd Time Admission Re-open Protest</h1>
-    <h3><i>leading by-</i> PUPILS' PERSPECTIVE</h3>
+    <h2>DU 2nd Time Admission Re-open Protest</h2>
+    <h4><i>leading by-</i> PUPILS' PERSPECTIVE</h4>
     </header>
 
   <main>
