--- a/home.html
+++ b/home.html
@@ -10,6 +10,7 @@
       margin: 0;
       font-family: "Times New Roman", Times, serif;
       background-color: #CBC3E3;
+      align-content: center;
     }
     header {
       background-color: #a87ad6;
@@ -65,18 +66,18 @@
     }
 
     .projects-wrapper {
-  display: flex;
-  flex-direction: column;
-  gap: 1.5rem;
-  margin-bottom: 2rem;
-}
+      display: flex;
+      flex-direction: column;
+      gap: 1.5rem;
+      margin-bottom: 2rem;
+    } 
 
 .project-card {
   display: flex;
   flex-direction: row;
   background: white;
-  border-radius: 8px;
-  overflow: hidden;
+  border-radius: 11px;
+  overflow: scroll;
   box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   text-decoration: none;
   color: inherit;
@@ -147,7 +148,7 @@
       font-size: 1.7rem;
     }
     footer p{
-      font-size: 1.2em;
+      font-size: 1rem;
     }
 
     footer img {
@@ -189,8 +190,7 @@
     <img src="https://scontent.fzyl2-2.fna.fbcdn.net/v/t39.30808-6/499784969_122120421086821289_7263840862193975299_n.jpg?_nc_cat=100&ccb=1-7&_nc_sid=cc71e4&_nc_eui2=AeEc0r0STgRFz7I8gB5Fyxy0ixuUiOCYWjOLG5SI4JhaM0rDD0JM1Q9yVqE7cld6y0AnYNBkDORumIVpZ1WTTbkH&_nc_ohc=B8waEZootLQQ7kNvwExyWbF&_nc_oc=AdmO5w5rB9VTZYa4VGAbpDem7ddRO9QPzmH2CnwDOaxKSLKkiWqyYLjhEuRIX6uCYYo&_nc_zt=23&_nc_ht=scontent.fzyl2-2.fna&_nc_gid=9ntA_KDq5ujrXJPSyTuXlQ&oh=00_AfI9-84AxYLWcTQHa3fTWO3q-wLsKa0ZVDBf7NvjNhMYZQ&oe=6836A359" alt="Project Cover">
     <div class="project-info">
       <h3>DU 2nd Time Admission Re-open</h3>
-      <p>2nd time admission system is an internationally recognized system. If Harvard University has 3rd time chance, then what's the problem with DU?</p>
-      <div class="status-tag">
+        <div class="status-tag">
         Project starded on:  27th March, 2025<br>
         Project ended on: (Not ended yet!)<br>
         Status: <i>Progressing</i>
@@ -198,7 +198,7 @@
     </div>
   </a>
 </div>
-    </a>
+    
 
   </main>
 
