--- a/about.html
+++ b/about.html
@@ -40,16 +40,18 @@
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
+      gap: 1rem;
+      padding: 1rem;
       background-color: #330066;
-      padding: 0.5rem;
-      gap: 0.75rem;
+      font-size: 1rem;
     }
+
     nav a {
       color: white;
       text-decoration: none;
-      font-size: 1rem;
-      padding: 0.5rem;
+      font-weight: bold;
     }
+
     nav a:hover {
       text-decoration: underline;
     }
@@ -138,7 +140,7 @@
       <a href="join.html">Join Us</a>
     </nav>
   </header>
-  
+
   <main>
     <h2>Welcome to Pupils' Perspective</h2>
     <p>We work together on various social issues to make a positive impact in our community. We are a youth organization committed to social change and community development. Our mission is to empower young people to take initiative in solving social issues. <b>Justice</b> is our first priority.</p>
@@ -146,10 +148,14 @@
   </main>
   <footer>
     <p><strong>Reach us</strong></p>
-    <p><a href="https://www.facebook.com/PupilsPerspective"><img src="https://upload.wikimedia.org/wikipedia/commons/6/6c/Facebook_Logo_2023.png" alt="Facebook"></a> <a href="https://www.facebook.com/PupilsPerspective">Facebook</a></p>
-    <p><a href="https://maps.app.goo.gl/PPo1x6TJf3cnmT249"><img src="https://png.pngtree.com/png-vector/20230106/ourmid/pngtree-flat-red-location-sign-png-image_6553065.png" alt="Location"></a> <a href="https://maps.app.goo.gl/PPo1x6TJf3cnmT249">Visit our office</a></p>
-    <p><a href="mailto:pupilsperspective.org@gmail.com"><img src="https://cdn4.iconfinder.com/data/icons/social-media-logos-6/512/112-gmail_email_mail-512.png" alt="Email"></a> Mail us: <a href="mailto:pupilsperspective.org@gmail.com">pupilsperspective.org@gmail.com</a></p>
-    <p><a href="tel:+8801306264601"><img src="https://www.citypng.com/public/uploads/preview/hd-green-square-phone-icon-png-7017516950597582y4ltbrryl.png" alt="Phone"></a> Call: <a href="tel:+8801884541714">+8801884541714</a></p>
+    <p><a href="https://www.facebook.com/PupilsPerspective"><img src="https://upload.wikimedia.org/wikipedia/commons/6/6c/Facebook_Logo_2023.png" alt="Facebook"></a>
+       <a href="https://www.facebook.com/PupilsPerspective">Facebook</a></p>
+    <p><a href="https://maps.app.goo.gl/PPo1x6TJf3cnmT249"><img src="https://png.pngtree.com/png-vector/20230106/ourmid/pngtree-flat-red-location-sign-png-image_6553065.png" alt="Location"></a>
+       <a href="https://maps.app.goo.gl/PPo1x6TJf3cnmT249">Visit our office</a></p>
+    <p><a href="mailto:pupilsperspective.org@gmail.com"><img src="https://cdn4.iconfinder.com/data/icons/social-media-logos-6/512/112-gmail_email_mail-512.png" alt="Email"></a>
+        Mail us: <a href="mailto:pupilsperspective.org@gmail.com">pupilsperspective.org@gmail.com</a></p>
+    <p><a href="tel:+8801306264601"><img src="https://www.citypng.com/public/uploads/preview/hd-green-square-phone-icon-png-7017516950597582y4ltbrryl.png" alt="Phone"></a>
+        Call now: <a href="tel:+8801884541714">+8801884541714</a></p>
   </footer>
 </body>
 </html>
