--- a/join.html
+++ b/join.html
@@ -43,16 +43,20 @@
       display: flex;
       flex-wrap: wrap;
       justify-content: center;
-      background-color: #330066;
       gap: 1rem;
-      padding: 0.5rem;
+      padding: 1rem;
+      background-color: #330066;
+      font-size: 1rem;
     }
 
     nav a {
       color: white;
       text-decoration: none;
       font-weight: bold;
-      font-size: 1rem;
+    }
+
+    nav a:hover {
+      text-decoration: underline;
     }
 
     main {
