--- a/about.html
+++ b/about.html
@@ -6,9 +6,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>About - Pupils' Perspective</title>
   <style>
-    * {
-      box-sizing: border-box;
-    }
+
     body {
       margin: 0;
       font-family: "Times New Roman", Times, serif;
@@ -98,34 +96,46 @@
       text-decoration: underline;
     }
 
-    /* Responsive Design */
     @media (max-width: 600px) {
-      nav {
-        flex-direction: column;
-        align-items: center;
-      }
-      header img {
-        width: 80px;
-        height: 80px;
-      }
-      h1 {
-        font-size: 1.3rem;
-      }
-      h4 {
-        font-size: 0.9rem;
-      }
-      main {
-        padding: 1rem 0.75rem;
-      }
-      main h2 {
-        font-size: 1.3rem;
-      }
-      footer p {
-        font-size: 0.95rem;
-        flex-direction: column;
-        align-items: flex-start;
-      }
-    }
+  nav {
+    overflow-x: auto;
+    white-space: nowrap;
+    padding: 0.5rem;
+  }
+
+  nav a {
+    display: inline-block;
+    padding: 0.5rem 1rem;
+  }
+
+  header img {
+    width: 80px;
+    height: 80px;
+  }
+
+  h1 {
+    font-size: 1.3rem;
+  }
+
+  h4 {
+    font-size: 0.9rem;
+  }
+
+  main {
+    padding: 1rem 0.75rem;
+  }
+
+  main h2 {
+    font-size: 1.3rem;
+  }
+
+  footer p {
+    font-size: 0.95rem;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+}
+
   </style>
 </head>
 <body>
