--- a/join.html
+++ b/join.html
@@ -151,32 +151,46 @@
       text-decoration: underline;
     }
 
-    @media (max-width: 600px) {
-      header h1 {
-        font-size: 1.25rem;
-      }
+    @media (max-width: 768px) {
+  nav {
+    overflow-x: auto;
+    white-space: nowrap;
+    padding: 0.5rem;
+  }
 
-      header h4 {
-        font-size: 0.9rem;
-      }
+  nav a {
+    display: inline-block;
+    padding: 0.5rem 1rem;
+  }
 
-      nav {
-        flex-direction: column;
-        gap: 0.5rem;
-      }
+  header img {
+    width: 80px;
+    height: 80px;
+  }
 
-      nav a {
-        font-size: 1rem;
-      }
+  h1 {
+    font-size: 1.3rem;
+  }
 
-      main {
-        margin: 1rem;
-      }
+  h4 {
+    font-size: 0.9rem;
+  }
 
-      footer {
-        font-size: 0.9rem;
-      }
-    }
+  main {
+    padding: 1rem 0.75rem;
+  }
+
+  main h2 {
+    font-size: 1.3rem;
+  }
+
+  footer p {
+    font-size: 0.95rem;
+    flex-direction: column;
+    align-items: flex-start;
+  }
+}
+
   </style>
 </head>
 <body>
