--- a/join.html
+++ b/join.html
@@ -151,7 +151,26 @@
       text-decoration: underline;
     }
 
-    @media (max-width: 600px) {
+    @media (max-width: 768px) {
+  nav {
+    display: block;
+    overflow-x: auto;
+    white-space: nowrap;
+    padding: 0.5rem;
+    background-color: #330066;
+  }
+
+  nav a {
+    display: inline-block;
+    padding: 0.5rem 1rem;
+    font-size: 1rem;
+  }
+
+  header img {
+    width: 80px;
+    height: 80px;
+  }
+
   header h1 {
     font-size: 1.25rem;
   }
@@ -160,26 +179,15 @@
     font-size: 0.9rem;
   }
 
-  nav {
-    overflow-x: auto;
-    white-space: nowrap;
-    justify-content: flex-start;
-    padding: 0.5rem;
-  }
-
-  nav a {
-    display: inline-block;
-    font-size: 1rem;
-    padding: 0.5rem 0.75rem;
-    white-space: nowrap;
-  }
-
   main {
+    padding: 1rem 0.75rem;
     margin: 1rem;
   }
 
-  footer {
-    font-size: 0.9rem;
+  footer p {
+    font-size: 0.95rem;
+    flex-direction: column;
+    align-items: flex-start;
   }
 }
 
